Fix legacy widget edit style bleed

--- a/packages/widgets/src/blocks/legacy-widget/editor.scss
+++ b/packages/widgets/src/blocks/legacy-widget/editor.scss
@@ -25,6 +25,34 @@
 		label + .widefat {
 			margin-top: $grid-unit-15;
 		}
+
+		// Override theme style bleed.
+		label,
+		input,
+		a {
+			color: $black;
+		}
+		select {
+			font-family: system-ui;
+			-webkit-appearance: revert;
+			color: revert;
+			border: revert;
+			border-radius: revert;
+			background: revert;
+			box-shadow: revert;
+			text-shadow: revert;
+			outline: revert;
+			cursor: revert;
+			transform: revert;
+			font-size: revert;
+			line-height: revert;
+			padding: revert;
+			margin: revert;
+			min-height: revert;
+			max-width: revert;
+			vertical-align: revert;
+			font-weight: revert;
+		}
 	}
 
 	// Reset z-index set on https://github.com/WordPress/wordpress-develop/commit/f26d4d37351a55fd1fc5dad0f5fef8f0f964908c.
